[tool.poetry]
name = "atlassian-access-user-audit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uplink = "^0.9.4"
furl = "^2.1.3"
python-dateutil = "^2.9.0.post0"
fire = "^0.4.0"
ecs-logging = "^2.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
